developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/OJSERLIB__Application_Contact__c.object-meta.xml
<CustomObject>
    <label>Application Contact</label>
    <nameField>
        <label>Application Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>