developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Application_Applicant__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Application_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Applicant</label>
    <referenceTo>OJSERLIB__Application_Applicant__c</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>