developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Billing_State__c</fullName>
    <label>Billing State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>