developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>