developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Contact_Full_Name__c</fullName>
    <formula>UPPER(OJSERLIB__First_Name__c&amp;&quot; &quot;&amp;OJSERLIB__Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>