developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Fax__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>