developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__First_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>