developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__IsBusiness_Director__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsBusiness_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBusiness Director</label>
    <type>Checkbox</type>
</CustomField>