developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Name_and_Position__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Name_and_Position__c</fullName>
    <formula>IF( ISBLANK(OJSERLIB__Position__c),OJSERLIB__Contact_Full_Name__c, OJSERLIB__Contact_Full_Name__c &amp; &apos;, &apos; &amp; OJSERLIB__Position__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Position</label>
    <type>Text</type>
</CustomField>