developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Phone__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>