developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Position__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Position__c</fullName>
    <formula>IF(OJSERLIB__IsBusiness_Director__c, &quot;BUSINESS DIRECTOR&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>