developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Postal_City__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Postal_City__c</fullName>
    <label>Postal City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>