developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Postal_PostCode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Postal_PostCode__c</fullName>
    <label>Postal PostCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>