developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Postal_Street__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Postal_Street__c</fullName>
    <label>Postal Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>