developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__State__c</fullName>
    <label>State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>