developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Title__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>