developerProject/force-app/main/default/objects/OJSERLIB__Application_Contact__c/fields/OJSERLIB__Website__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Website__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>